[package]
name = "boolector"
version = "0.4.1"
authors = ["Craig Disselkoen <craigdissel@gmail.com>"]
edition = "2018"
description = "Safe high-level bindings for the Boolector SMT solver"
documentation = "https://docs.rs/boolector"
repository = "https://github.com/cdisselkoen/boolector-rs"
readme = "README.md"
keywords = ["boolector", "smt", "ffi", "bindings"]
license = "MIT"

[features]
vendored = ['boolector-sys/vendored']

[dependencies]
boolector-sys = { git = "https://github.com/finga/boolector-sys", branch = "boolector-src", features = ["vendored"] }
libc = "0.2.73"
